--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "@vue/prettier"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-empty": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
