--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     ],
     "rules": {
       "no-console": "off",
-      "no-empty": "off"
+      "no-empty": "off",
+      "no-unused-vars": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
