--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
     "animate.css": "^3.7.2",
     "axios": "^0.19.1",
     "core-js": "^3.4.4",
@@ -25,8 +26,11 @@
     "qs": "^6.9.1",
     "screenfull": "^5.0.0",
     "vue": "^2.6.10",
+    "vue-count-to": "^1.0.13",
+    "vue-ele-upload-image": "^2.0.9",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
